--- a/running.html
+++ b/running.html
@@ -49,7 +49,7 @@
 				<h1>Running</h1>
 				<ul class="gallery">
 					<li>
-						<a href="runningsinglepost.html"><img src="images/hossam.jpg" alt=""></a>
+						<a href="runningsinglepost.html"><img src="images/hossam.jpg" alt="" style="height: 50px; width: 50px"></a>
 					</li>
 					<li>
 						<a href="runningsinglepost.html"><img src="images/running-image2.png" alt=""></a>
